up fo: image_processing and fo:machine_learning

--- a/image_processing/image_enhancement.ipynb
+++ b/image_processing/image_enhancement.ipynb
@@ -10,6 +10,7 @@
     "# 1. 去噪\n",
     "# 使用高斯濾波器進行去噪處理，以提高影像的清晰度。\n",
     "\n",
+    "image = cv2.imread('path/to/your/image.jpg', cv2.IMREAD_GRAYSCALE)\n",
     "blurred = cv2.GaussianBlur(image, (5, 5), 0)"
    ]
   },
@@ -25,7 +26,7 @@
     "clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
     "enhanced_image = clahe.apply(blurred)\n",
     "cv2.imshow('Enhanced Image', enhanced_image)\n",
-    "cv2.waitKey(0)"
+    "cv2.waitKey(1000)"
    ]
   },
   {
@@ -40,7 +41,8 @@
     "thresh = cv2.adaptiveThreshold(enhanced_image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C,\n",
     "                               cv2.THRESH_BINARY, 11, 2)\n",
     "cv2.imshow('Thresholded Image', thresh)\n",
-    "cv2.waitKey(0)"
+    "cv2.waitKey(1000)\n",
+    "# cv2.destroyAllWindows()"
    ]
   }
  ],
