--- a/image_processing/texture_analysis.ipynb
+++ b/image_processing/texture_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "# 1. 讀取影像\n",
     "# 讀取晶片表面的影像，用於紋理分析。\n",
     "\n",
-    "image = cv2.imread('texture_image.png', cv2.IMREAD_GRAYSCALE)"
+    "import cv2\n",
+    "image = cv2.imread('images/defect1.jpg', cv2.IMREAD_GRAYSCALE)"
    ]
   },
   {
@@ -22,7 +23,7 @@
     "# 2. 紋理特徵提取\n",
     "# 使用灰度共生矩陣 (GLCM) 提取紋理特徵。\n",
     "\n",
-    "from skimage.feature import greycomatrix, greycoprops\n",
+    "from skimage.feature import greycomatrix, greycoprops # pip install scikit-image\n",
     "\n",
     "glcm = greycomatrix(image, distances=[5], angles=[0], levels=256, symmetric=True, normed=True)\n",
     "contrast = greycoprops(glcm, 'contrast')[0, 0]\n",
